# pytorch_modular

./: .gitignore  ReadMe.md  __init__.py  pyproject.toml
UnsupervisedDomainAdaptation/FeatureAlignment/: MMD.py
UnsupervisedDomainAdaptation/FeatureAlignment/DAN/: data.py  exp.ipynb  (+2 more)
image_classification/plant_seedlings/: sanity_check.py  train.py
mypt/mypt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
object_localization/: data_preparation.py  main.py
object_localization/data/: data_preparation.py
object_localization/src/: data_preparation.py  train_per_epoch.py  training.py
simClr/: _main_eval.py  _tune.py  data_augs_selection.py  debugging_list.md  main.py  main_eval.py  main_exp.py  main_train.py  main_tune.py  readme.md  test_ds_wrapper.py  tune.py
simClr/_pytorch/: _main_eval.py  _main_train.py
simClr/clearmlOpt/: main.py  tune_task.py
simClr/data/: data_preparation.py
simClr/model_train/: _set_ds.py  data_augs_selection.py  ds_wrapper.py  evaluating.py  train.py  train_per_epoch.py  training.py  tune.py  tuning.py
simClr/model_train_pl/: constants.py  readme.md  set_ds.py  simClrWrapper.py  train.py  tuning.py  tuning_optimizer.py  tuning_train.py
simClr/model_train_pytorch/: training.py  tuning.py
simClr/models/: simClrModel.py
simClr/tests/: test_loss.py
src/: setup.cfg
src/classification/: classification_head.py
src/dimensions_analysis/: dimension_analyser.py
src/mypt/: shortcuts.py
src/mypt.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: custom_base_test.py
src/utilities/: directories_and_files.py  str_class_map.py
(+352 files in other folders)
