[project]
name = "mypt"
version = "1.2.0"

authors = [
  { name="Ayhem Bouabid", email="ayhembouabid@yandex.com" },
]

description = "A Pytorch Helper Package"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/ayhem18/pytorch_modular"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/*",
]

exclude = [
  "azure-pipelines",
  ".gitignore",
  ".git",
  "demo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mypt"]
